include/sonare/sonare_c_mastering.h


typedef struct {
  float threshold;           
  float neighbor_ratio;      
  size_t max_click_samples;  
  int lpc_order;             
  float residual_ratio;      
} SonareDeclickConfig;
typedef struct {
  int mode;                         
  int noise_estimator;              
  int n_fft;                        
  int hop_length;                   
  float dd_alpha;                   
  float reduction_db;               
  float over_subtraction;           
  float spectral_floor;             
  float noise_estimation_quantile;  
  int speech_presence_gain;         
  int gain_smoothing;               
} SonareDenoiseClassicalConfig;
SonareError sonare_mastering_repair_declick(const float* samples, size_t length, int sample_rate,
                                            const SonareDeclickConfig* config, float** out,
                                            size_t* out_length);
typedef struct {
  size_t count;                
  size_t rejected;             
  size_t longest_run_samples;  
  float per_second;            
} SonareClickDetection;
SonareError sonare_mastering_repair_detect_clicks(const float* samples, size_t length,
                                                  int sample_rate,
                                                  const SonareDeclickConfig* config,
                                                  SonareClickDetection* out);
typedef struct {
  SonareClickDetection detected;  
  size_t repaired_runs;           
  size_t repaired_samples;        
  size_t linked_runs;             
  int lpc_model_used;             
} SonareDeclickReport;
typedef struct {
  float* left;
  float* right;
  size_t length;
  SonareDeclickReport left_report;
  SonareDeclickReport right_report;
} SonareDeclickStereoResult;
SonareError sonare_mastering_repair_declick_stereo(const float* left, const float* right,
                                                   size_t length, int sample_rate,
                                                   const SonareDeclickConfig* config,
                                                   SonareDeclickStereoResult* out);
SonareError sonare_mastering_repair_denoise_classical(const float* samples, size_t length,
                                                      int sample_rate,
                                                      const SonareDenoiseClassicalConfig* config,
                                                      float** out, size_t* out_length);
typedef struct {
  float floor_dbfs;                                       
  float band_floor_dbfs[SONARE_REPAIR_NOISE_BAND_COUNT];  
} SonareNoiseDetection;
SonareError sonare_mastering_repair_detect_noise_floor(const float* samples, size_t length,
                                                       int sample_rate,
                                                       const SonareDenoiseClassicalConfig* config,
                                                       SonareNoiseDetection* out);
typedef struct {
  SonareNoiseDetection detected;  
  float mean_reduction_db;        
  float max_reduction_db;         
  float floor_limited_fraction;   
} SonareDenoiseReport;
typedef struct {
  float* left;
  float* right;
  size_t length;
  SonareDenoiseReport report;
} SonareDenoiseStereoResult;
SonareError sonare_mastering_repair_denoise_classical_stereo(
    const float* left, const float* right, size_t length, int sample_rate,
    const SonareDenoiseClassicalConfig* config, SonareDenoiseStereoResult* out);
typedef struct {
  float clip_threshold;  
  int lpc_order;         
  int iterations;        
  float lpc_blend;       
} SonareDeclipConfig;
SonareError sonare_mastering_repair_declip(const float* samples, size_t length, int sample_rate,
                                           const SonareDeclipConfig* config, float** out,
                                           size_t* out_length);
typedef struct {
  size_t sample_count;         
  float sample_fraction;       
  size_t run_count;            
  size_t longest_run_samples;  
} SonareClipDetection;
SonareError sonare_mastering_repair_detect_clipping(const float* samples, size_t length,
                                                    int sample_rate,
                                                    const SonareDeclipConfig* config,
                                                    SonareClipDetection* out);
typedef struct {
  SonareClipDetection detected;   
  size_t lpc_reconstructed_runs;  
  size_t interpolated_runs;       
  size_t repaired_samples;        
  size_t linked_runs;             
} SonareDeclipReport;
typedef struct {
  float* left;
  float* right;
  size_t length;
  SonareDeclipReport left_report;
  SonareDeclipReport right_report;
} SonareDeclipStereoResult;
SonareError sonare_mastering_repair_declip_stereo(const float* left, const float* right,
                                                  size_t length, int sample_rate,
                                                  const SonareDeclipConfig* config,
                                                  SonareDeclipStereoResult* out);
typedef struct {
  float threshold;  
  int mode;         
  int levels;       
} SonareDecrackleConfig;
SonareError sonare_mastering_repair_decrackle(const float* samples, size_t length, int sample_rate,
                                              const SonareDecrackleConfig* config, float** out,
                                              size_t* out_length);
typedef struct {
  size_t sample_count;    
  float sample_fraction;  
  float per_second;
} SonareCrackleDetection;
SonareError sonare_mastering_repair_detect_crackle(const float* samples, size_t length,
                                                   int sample_rate,
                                                   const SonareDecrackleConfig* config,
                                                   SonareCrackleDetection* out);
typedef struct {
  SonareCrackleDetection detected;  
  size_t replaced_samples;          
  size_t detail_coefficients;       
  size_t shrunk_coefficients;       
  float noise_sigma;                
} SonareDecrackleReport;
typedef struct {
  float* left;
  float* right;
  size_t length;
  SonareDecrackleReport left_report;
  SonareDecrackleReport right_report;
} SonareDecrackleStereoResult;
SonareError sonare_mastering_repair_decrackle_stereo(const float* left, const float* right,
                                                     size_t length, int sample_rate,
                                                     const SonareDecrackleConfig* config,
                                                     SonareDecrackleStereoResult* out);
typedef struct {
  float fundamental_hz;   
  int harmonics;          
  float q;                
  int adaptive;           
  float search_range_hz;  
  float adaptation;       
  int frame_size;         
  float pll_bandwidth;    
} SonareDehumConfig;
SonareError sonare_mastering_repair_dehum(const float* samples, size_t length, int sample_rate,
                                          const SonareDehumConfig* config, float** out,
                                          size_t* out_length);
typedef struct {
  float fundamental_hz;                             
  float fundamental_prominence;                     
  int harmonics;                                    
  float harmonic_dbfs[SONARE_DEHUM_MAX_HARMONICS];  
} SonareHumDetection;
SonareError sonare_mastering_repair_detect_hum(const float* samples, size_t length, int sample_rate,
                                               const SonareDehumConfig* config,
                                               SonareHumDetection* out);
typedef struct {
  SonareHumDetection detected;   
  int notched_harmonics;         
  float applied_fundamental_hz;  
  float fundamental_drift_hz;    
} SonareDehumReport;
typedef struct {
  float* left;
  float* right;
  size_t length;
  SonareDehumReport left_report;
  SonareDehumReport right_report;
} SonareDehumStereoResult;
SonareError sonare_mastering_repair_dehum_stereo(const float* left, const float* right,
                                                 size_t length, int sample_rate,
                                                 const SonareDehumConfig* config,
                                                 SonareDehumStereoResult* out);
typedef struct {
  float threshold;         
  float attenuation;       
  int n_fft;               
  int hop_length;          
  float t60_sec;           
  float late_delay_ms;     
  float over_subtraction;  
  float spectral_floor;    
  int wpe_enabled;         
  int wpe_iterations;      
  int wpe_taps;            
  float wpe_strength;      
} SonareDereverbClassicalConfig;
SonareError sonare_mastering_repair_dereverb_classical(const float* samples, size_t length,
                                                       int sample_rate,
                                                       const SonareDereverbClassicalConfig* config,
                                                       float** out, size_t* out_length);
typedef struct {
  float late_decay_ratio_db;  
  float late_predictability;  
} SonareReverbDetection;
SonareError sonare_mastering_repair_detect_reverb(const float* samples, size_t length,
                                                  int sample_rate,
                                                  const SonareDereverbClassicalConfig* config,
                                                  SonareReverbDetection* out);
typedef struct {
  SonareReverbDetection detected;  
  float mean_reduction_db;         
  float suppressed_fraction;       
  float wpe_predictor_norm;        
} SonareDereverbReport;
typedef struct {
  float* left;
  float* right;
  size_t length;
  SonareDereverbReport report;
} SonareDereverbStereoResult;
SonareError sonare_mastering_repair_dereverb_classical_stereo(
    const float* left, const float* right, size_t length, int sample_rate,
    const SonareDereverbClassicalConfig* config, SonareDereverbStereoResult* out);
SonareError sonare_mastering_repair_dereverb_apply_room_estimate(
    const SonareRoomEstimate* estimate, SonareDereverbClassicalConfig* config);
typedef struct {
  float threshold;         
  size_t padding_samples;  
  int mode;                
  float gate_lufs;         
  float window_ms;         
} SonareTrimSilenceConfig;
SonareError sonare_mastering_repair_trim_silence(const float* samples, size_t length,
                                                 int sample_rate,
                                                 const SonareTrimSilenceConfig* config, float** out,
                                                 size_t* out_length);
typedef struct {
  size_t first;           
  size_t last_exclusive;  
} SonareTrimRange;
SonareError sonare_mastering_repair_detect_trim_range(const float* samples, size_t length,
                                                      int sample_rate,
                                                      const SonareTrimSilenceConfig* config,
                                                      SonareTrimRange* out);
SonareError sonare_mastering_repair_detect_trim_range_stereo(const float* left, const float* right,
                                                             size_t length, int sample_rate,
                                                             const SonareTrimSilenceConfig* config,
                                                             SonareTrimRange* out);
typedef struct {
  SonareTrimRange range;        
  size_t removed_head_samples;  
  size_t removed_tail_samples;  
} SonareTrimReport;
typedef struct {
  float* left;
  float* right;
  size_t length;
  SonareTrimReport report;
  SonareTrimRange left_range;
  SonareTrimRange right_range;
} SonareTrimSilenceStereoResult;
SonareError sonare_mastering_repair_trim_silence_stereo(const float* left, const float* right,
                                                        size_t length, int sample_rate,
                                                        const SonareTrimSilenceConfig* config,
                                                        SonareTrimSilenceStereoResult* out);
typedef struct {
  float threshold_db;         
  float ratio;                
  float attack_ms;            
  float release_ms;           
  float knee_db;              
  float makeup_gain_db;       
  int auto_makeup;            
  int detector;               
  int sidechain_hpf_enabled;  
  float sidechain_hpf_hz;     
  float pdr_time_ms;          
  float pdr_release_scale;    
} SonareCompressorConfig;
SonareError sonare_mastering_dynamics_compressor(const float* samples, size_t length,
                                                 int sample_rate,
                                                 const SonareCompressorConfig* config, float** out,
                                                 size_t* out_length, int* out_latency_samples);
typedef struct {
  float threshold_db;        
  float attack_ms;           
  float release_ms;          
  float range_db;            
  float hold_ms;             
  float close_threshold_db;  
  float key_hpf_hz;          
} SonareGateConfig;
SonareError sonare_mastering_dynamics_gate(const float* samples, size_t length, int sample_rate,
                                           const SonareGateConfig* config, float** out,
                                           size_t* out_length, int* out_latency_samples);
typedef struct {
  float attack_gain_db;     
  float sustain_gain_db;    
  float fast_attack_ms;     
  float fast_release_ms;    
  float slow_attack_ms;     
  float slow_release_ms;    
  float sensitivity;        
  float max_gain_db;        
  float gain_smoothing_ms;  
  float lookahead_ms;       
} SonareTransientShaperConfig;
SonareError sonare_mastering_dynamics_transient_shaper(const float* samples, size_t length,
                                                       int sample_rate,
                                                       const SonareTransientShaperConfig* config,
                                                       float** out, size_t* out_length,
                                                       int* out_latency_samples);